<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditAccountActivity">

    <!--ID Category-->
    <LinearLayout
        android:id="@+id/container_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_id"
            style="@style/CategoryStyleEditor"
            android:textStyle="bold"/>

        <!-- ID VIEW-->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/edit_auth_mobile"
                tools:text="+8801811563457"
                style="@style/CategoryStyleMenu"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>

        </LinearLayout>

    </LinearLayout>

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyleEditor"
            android:text="@string/category_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_name"
                android:inputType="textCapWords" />

            <!-- Mobile No. field -->
            <EditText
                android:id="@+id/edit_mobile_no"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_mobile_no"
                android:inputType="phone" />

            <!-- Location. field -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:id="@+id/edit_address"
                    android:hint="@string/hint_address"
                    android:editable="false"
                    android:visibility="visible"
                    android:inputType="textCapWords"
                    style="@style/EditorFieldStyle" />

                <Button
                    android:id="@+id/location_btn"
                    android:visibility="visible"
                    android:text="Select your location"
                    android:onClick="addressClick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>




        </LinearLayout>

    </LinearLayout>

    <!-- Blood Group category -->

    <LinearLayout
        android:id="@+id/container_blood_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_blood_group"
            style="@style/CategoryStyleEditor" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_blood_group"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Gender category -->
    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_gender"
            style="@style/CategoryStyleEditor" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Measurement category -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_measurement"
            style="@style/CategoryStyleEditor" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Weight field -->
            <EditText
                android:id="@+id/edit_weight"
                android:hint="@string/hint_weight"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <!-- Units for weight (kg) -->
            <TextView
                android:id="@+id/label_weight_units"
                android:text="@string/unit_weight"
                style="@style/EditorUnitsStyle"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_datepicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="Date"
            style="@style/CategoryStyleEditor" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Weight field -->
            <EditText
                android:clickable="true"
                android:editable="false"
                android:focusable="false"
                android:id="@+id/edit_date"
                android:hint="Last blood donation date"
                android:inputType="date"
                style="@style/EditorFieldStyle" />

        </RelativeLayout>
    </LinearLayout>




    <LinearLayout
        android:id="@+id/container_active_donor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="Activate Account"
            style="@style/CategoryStyleEditor" />

        <!-- Input fields -->

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:layout_height="wrap_content">


            <android.support.v7.widget.AppCompatCheckBox
                android:padding="16dp"
                android:checked="true"
                android:id="@+id/activate_acc"
                android:text="Activate my account right now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>




    </LinearLayout>



</LinearLayout>
